# Media

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/explain/media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_handler.cpp  ffmpeg_audio_encoder_pure.cpp  jni_hello.cpp  jni_hello.h
app/src/main/cpp/ffmpeg/: ffmpeg.h
app/src/main/java/com/explain/media/: CoreApplication.java  MainActivity.java
app/src/main/java/com/explain/media/Utils/: FFmpegCmd.java  SDFileUtil.java
app/src/main/java/com/explain/media/activity/: ARecordActivity.java  AudioEncodeActivity.java  AudioHandleActivity.java  AudioPlayActivity.java  BaseActivity.java  MRecordActivity.java  RecordHandleActivity.java  VideoHandleActivity.java
app/src/main/java/com/explain/media/activity/base/: BaseActivity.java
app/src/main/java/com/explain/media/activity/second/: ARecordActivity.java  AudioDecodeActivity.java  AudioEncodeActivity.java  AudioPlayActivity.java  MRecordActivity.java  PCMPlayActivity.java  TranscodingActivity.java
app/src/main/java/com/explain/media/audio/activity/: ARecordActivity.java  AudioEncodeActivity.java  AudioPlayActivity.java  MRecordActivity.java
app/src/main/java/com/explain/media/audio/encode/: AudioEncode.java
app/src/main/java/com/explain/media/audio/play/: AudioPlayActivity.java
app/src/main/java/com/explain/media/audio/record/: AudioRecorder.java  MAudioRecorder.java
app/src/main/java/com/explain/media/listener/: RecordLisnter.java
app/src/main/java/com/explain/media/manager/: AudioTrackManager.java
app/src/main/java/com/explain/media/utils/: FFmpegCmd.java  MediaFile.java  SDFileUtil.java
app/src/main/java/com/explain/media/video/: MVideoRecorder.java
app/src/main/java/com/explain/media/video/helper/: CameraHelper.java
app/src/main/java/com/explain/media/video/stream/: VideoStream.java
app/src/main/java/com/explain/media/view/: LoadingDialog.java
app/src/main/res/drawable/: bg_corner6_button.xml  bg_record_btn.xml  bg_record_circular_ring_button.xml
app/src/main/res/layout/: activity_audio_decode.xml  activity_audio_encode.xml  activity_audio_handle.xml  activity_audio_player.xml  activity_main.xml  activity_record_handle.xml  activity_transcoding.xml  activity_video_handle.xml  dialog_loading.xml
app/src/test/java/com/explain/media/: ExampleUnitTest.java
